# pivot_dj4

./: README.md  manage.py  pyproject.toml
pivot_dj4/: asgi.py  settings.py  urls.py  wsgi.py
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_ballot_poll_delete_choice_delete_question_and_more.py  0003_rename_question_text_poll_text.py
polls/templates/polls/: ballot_index.html  detail.html  index.html  poll.html  poll_index.html  result.html  results.html
tests/: test_pivot_dj4.py
