[tool.poetry]
name = "pivot_dj4"
version = "1.0.0"
description = ""
authors = ["Carl Schroedl <carlschroedl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
votelib = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
